# home_dvd_collection

./: LEIAME.md  README.md
python/: pyproject.toml
python/dvd/: Dockerfile  docker-compose.yml  manage.py  pytest.ini  requirements.txt
python/dvd/app/: admin.py  models.py  serializers.py  urls.py  views.py
python/dvd/app/migrations/: 0001_initial.py
python/dvd/app/tests/: test_models.py
python/dvd/dvd/: asgi.py  settings.py  urls.py  wsgi.py
