[tool.poetry]
name = "dvd"
version = "0.1.0"
description = ""
authors = ["Gilvando Lucas Vieira"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.3"
djangorestframework = "^3.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
mixer = "^6.1.3"
pytest-django = "^3.8.0"
autopep8 = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
